* UCL study: adding events for open/save and programmatic file access in file dialogs  + one event per non-internal call to get_file-like methods, with subjects per type of widget  + special event for when a button's file is set * Adding a file dialog example to test open/save code
original bzr status:
revno: 2
committer: Steve Dodier-Lazaro <sidnioulz@gmail.com>
branch nick: gtk+3.0-3.14.13
timestamp: Sun 2015-06-07 18:15:02 +0100

--- a/configure.ac
+++ b/configure.ac
@@ -507,6 +507,24 @@ else
   fi
 fi
 
+dnl ************************************
+dnl *** Check for libzeitgeist (GIO) ***
+dnl ************************************
+PKG_CHECK_EXISTS(zeitgeist-1.0, [have_zeitgeist_deps=true], [have_zeitgeist_deps=false])
+
+AC_MSG_CHECKING(zeitgeist-1.0)
+if $PKG_CONFIG --exists zeitgeist-1.0 ; then
+  AC_DEFINE(__ZEITGEIST_TRACKER__, 1, [Have Zeitgeist])
+
+  CFLAGS="$CFLAGS `$PKG_CONFIG --cflags zeitgeist-1.0`"
+  AC_SUBST(CFLAGS)
+  AC_MSG_RESULT($CFLAGS)
+
+else
+  AC_MSG_ERROR([*** Working Zeitgeist library and headers not found ***])
+fi
+
+
 # Build time sanity check...
 AM_SANITY_CHECK
 
