--- a/debian/control
+++ b/debian/control
@@ -38,6 +38,7 @@ Build-Depends: debhelper (>= 8.1.3),
                libxinerama-dev (>= 2:1.1-3),
                libxfixes-dev (>= 1:3.0.0-3),
                libcairo2-dev (>= 1.12.0),
+               libzeitgeist-1.0-1(>= 0.8),
                x11proto-xext-dev,
                libcups2-dev (>= 1.2),
                libcolord-dev (>= 0.1.9),
@@ -62,6 +63,7 @@ Package: libgtk-3-0
 Architecture: any
 Multi-Arch: same
 Depends: libgtk-3-common (>= ${source:Version}),
+         libzeitgeist-1.0-1(>= 0.8),
          ${misc:Depends},
          ${shlibs:Depends},
          shared-mime-info
