* UCL Study: clipboard events + entry and text view additional paste events * Readding the file dialog example which mysteriously disappeared
original bzr status:
revno: 3
committer: Steve Dodier-Lazaro <sidnioulz@gmail.com>
branch nick: gtk+3.0-3.14.13
timestamp: Sun 2015-06-07 18:17:03 +0100

--- a/gtk/Makefile.am
+++ b/gtk/Makefile.am
@@ -678,6 +678,7 @@ gtk_private_h_sources =		\
 	gtkwin32themeprivate.h	\
 	gtkwindowprivate.h	\
 	gtktreemenu.h		\
+	zgtrackutils.h		\
 	$(gtk_private_type_h_sources) \
 	$(gtk_clipboard_dnd_h_sources)
 
@@ -1094,6 +1095,7 @@ gtk_base_c_sources = 		\
 	gtkwindow.c		\
 	gtkwindowgroup.c	\
 	gtkwin32theme.c		\
+	zgtrackutils.c		\
 	$(gtk_clipboard_dnd_c_sources)
 
 nodist_gtk_c_sources =
