UCL Study: proper handling of recent files
original bzr status:
revno: 4
committer: Steve Dodier-Lazaro <sidnioulz@gmail.com>
branch nick: gtk+3.0-3.14.13
timestamp: Sun 2015-06-07 18:52:35 +0100

--- a/examples/Makefile.am
+++ b/examples/Makefile.am
@@ -29,7 +29,8 @@ noinst_PROGRAMS = \
 	drawing					\
 	builder					\
 	search-bar				\
-	filedialog
+	filedialog				\
+	recentdialog
 
 EXTRA_DIST = builder.ui
 
