Fixing the build-dep of the package
original bzr status:
revno: 5
committer: Steve Dodier-Lazaro <sidnioulz@gmail.com>
branch nick: gtk+3.0-3.14.13
timestamp: Sun 2015-06-07 21:15:32 +0100

--- a/debian/control
+++ b/debian/control
@@ -38,7 +38,7 @@ Build-Depends: debhelper (>= 8.1.3),
                libxinerama-dev (>= 2:1.1-3),
                libxfixes-dev (>= 1:3.0.0-3),
                libcairo2-dev (>= 1.12.0),
-               libzeitgeist-1.0-1(>= 0.8),
+               libzeitgeist-dev(>= 0.3),
                x11proto-xext-dev,
                libcups2-dev (>= 1.2),
                libcolord-dev (>= 0.1.9),
